Fixed author email address

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
 Alan McGovern <alan.mcgovern@gmail.com>
 Ben Motmans <ben.motmans@gmail.com>
-Nicholas Terry <nicholasterry@familysearch.org>
+Nicholas Terry <nick.i.terry@gmail.com>
